# libbase58

./: Base58Config.cmake.in  CMakeLists.txt  README.md  base58.c  base58.h  main.c
test/: CMakeLists.txt  decode.sh  encode.sh
